{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 9906,
  "lineage": "bd170668-716c-bd8b-71c2-078b758fc11a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00b0bb86a4287f38f",
            "arn": "arn:aws:ec2:us-east-2:565979732541:instance/i-02d8b34a0a73de09c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "simplyblock-instance-profile-israel",
            "id": "i-02d8b34a0a73de09c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "simplyblock-us-east-2.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b33f123534e4484c",
            "private_dns": "ip-10-0-2-145.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.145",
            "public_dns": "ec2-13-59-202-104.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.202.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 135,
                "throughput": 0,
                "volume_id": "vol-0db3ea5ac44c14aaa",
                "volume_size": 45,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085c8c517bf91864d",
            "tags": {
              "Name": "israel-bastion"
            },
            "tags_all": {
              "Name": "israel-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0703a37cad181656a"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_security_group.bastion_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "extra_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00b0bb86a4287f38f",
            "arn": "arn:aws:ec2:us-east-2:565979732541:instance/i-0050b350fd9a1f932",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "simplyblock-instance-profile-israel",
            "id": "i-0050b350fd9a1f932",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "simplyblock-us-east-2.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b8974a3022b2899a",
            "private_dns": "ip-10-0-4-44.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.44",
            "public_dns": "ec2-18-224-153-253.us-east-2.compute.amazonaws.com",
            "public_ip": "18.224.153.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 135,
                "throughput": 0,
                "volume_id": "vol-016edf9b17932b46d",
                "volume_size": 45,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05aba4401e6c4b99c",
            "tags": {
              "Name": "israel-k8scluster-1"
            },
            "tags_all": {
              "Name": "israel-k8scluster-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-010725476877dd78f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.extra_nodes_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00b0bb86a4287f38f",
            "arn": "arn:aws:ec2:us-east-2:565979732541:instance/i-00d642390e9155a15",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "simplyblock-instance-profile-israel",
            "id": "i-00d642390e9155a15",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "simplyblock-us-east-2.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-075e5a7300ac16955",
            "private_dns": "ip-10-0-4-11.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.11",
            "public_dns": "ec2-18-117-238-188.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.238.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 135,
                "throughput": 0,
                "volume_id": "vol-0ba8f88be214c2a5a",
                "volume_size": 45,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05aba4401e6c4b99c",
            "tags": {
              "Name": "israel-k8scluster-2"
            },
            "tags_all": {
              "Name": "israel-k8scluster-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-010725476877dd78f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.extra_nodes_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00b0bb86a4287f38f",
            "arn": "arn:aws:ec2:us-east-2:565979732541:instance/i-097e69eaad5037001",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "simplyblock-instance-profile-israel",
            "id": "i-097e69eaad5037001",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "simplyblock-us-east-2.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00382347452062ad7",
            "private_dns": "ip-10-0-4-206.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.206",
            "public_dns": "ec2-18-118-247-28.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.247.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 135,
                "throughput": 0,
                "volume_id": "vol-0aab2e1600fdab070",
                "volume_size": 45,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05aba4401e6c4b99c",
            "tags": {
              "Name": "israel-k8scluster-3"
            },
            "tags_all": {
              "Name": "israel-k8scluster-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-010725476877dd78f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.extra_nodes_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00b0bb86a4287f38f",
            "arn": "arn:aws:ec2:us-east-2:565979732541:instance/i-01c67809e2e5534fd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "simplyblock-instance-profile-israel",
            "id": "i-01c67809e2e5534fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "simplyblock-us-east-2.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04182f598f4cf9a8c",
            "private_dns": "ip-10-0-4-177.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.177",
            "public_dns": "ec2-18-216-108-216.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.108.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 135,
                "throughput": 0,
                "volume_id": "vol-0a0315ad5ef011754",
                "volume_size": 45,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05aba4401e6c4b99c",
            "tags": {
              "Name": "israel-k8scluster-4"
            },
            "tags_all": {
              "Name": "israel-k8scluster-4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-010725476877dd78f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.inst_profile",
            "aws_iam_role.role",
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.extra_nodes_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role_policy",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_gateway_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:security-group/sg-09d3d8b9132e25fc0",
            "description": "API Gateway Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from API gateway to Loadbalancer",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d3d8b9132e25fc0",
            "ingress": [],
            "name": "israel-api_gateway_sg",
            "name_prefix": "",
            "owner_id": "565979732541",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0377ac53ae2211a22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:security-group/sg-0703a37cad181656a",
            "description": "CSI Cluster Container Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0703a37cad181656a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "israel-bastion_sg",
            "name_prefix": "",
            "owner_id": "565979732541",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0377ac53ae2211a22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "extra_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:security-group/sg-010725476877dd78f",
            "description": "CSI Cluster Container Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010725476877dd78f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow DNS resolution from worker nodes",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow UDP traffic on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "k3s cluster",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "k3s cluster",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "k8s node communication",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10255
              },
              {
                "cidr_blocks": [],
                "description": "For SPDK Proxy for the storage node",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c963cfeb5750927"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "allow ICMP Echo",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-05c963cfeb5750927"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "docker engine API",
                "from_port": 2375,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c963cfeb5750927"
                ],
                "self": false,
                "to_port": 2375
              }
            ],
            "name": "israel-extra_nodes_sg",
            "name_prefix": "",
            "owner_id": "565979732541",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0377ac53ae2211a22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loadbalancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:security-group/sg-0fdda021a7ce270f2",
            "description": "Loadbalancer Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from API gateway to Mgmt nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fdda021a7ce270f2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Grafana from API gateway",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09d3d8b9132e25fc0"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "Graylog from API gateway",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09d3d8b9132e25fc0"
                ],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from API gateway",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09d3d8b9132e25fc0"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "israel-loadbalancer_sg",
            "name_prefix": "",
            "owner_id": "565979732541",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0377ac53ae2211a22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_gateway_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:security-group/sg-05c963cfeb5750927",
            "description": "CSI Cluster Container Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all output traffic so that packages can be downloaded",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c963cfeb5750927",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4500
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4800,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4800
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Docker Swarm Manager Communication",
                "from_port": 2377,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2377
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Docker Swarm Node Communication TCP",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Docker Swarm Node Communication UDP",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Docker Swarm Overlay Network",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4789
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Graylog GELF Communication TCP",
                "from_port": 12202,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 12202
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "docker engine API",
                "from_port": 2375,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2375
              },
              {
                "cidr_blocks": [],
                "description": "EFS from mgmt nodes",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "Grafana from Loadbalancer",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fdda021a7ce270f2"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "Graylog from Loadbalancer",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fdda021a7ce270f2"
                ],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from Loadbalancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fdda021a7ce270f2"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from other mgmt nodes",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion Server",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0703a37cad181656a"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "allow ICMP Echo",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "israel-mgmt_node_sg",
            "name_prefix": "",
            "owner_id": "565979732541",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0377ac53ae2211a22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.loadbalancer_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "storage_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:security-group/sg-0c8d05b402cfd3f28",
            "description": "CSI Cluster Container Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all output traffic so that packages can be downloaded",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8d05b402cfd3f28",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow DNS resolution from worker nodes",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow UDP traffic on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Docker Swarm Manager Communication",
                "from_port": 2377,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2377
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Docker Swarm Node Communication TCP",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Docker Swarm Node Communication UDP",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Docker Swarm Overlay Network",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4789
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Graylog GELF Communication TCP",
                "from_port": 12201,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 12201
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Graylog GELF Communication TCP",
                "from_port": 12201,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 12201
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "k3s cluster",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "k8s node communication",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10255
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "storage node lvol connect",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9900
              },
              {
                "cidr_blocks": [],
                "description": "For SPDK Proxy for the storage node from mgmt node",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c963cfeb5750927"
                ],
                "self": false,
                "to_port": 8890
              },
              {
                "cidr_blocks": [],
                "description": "For SPDK Proxy for the storage node from other storage nodes",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8890
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion Server",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c963cfeb5750927",
                  "sg-0703a37cad181656a"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "access SNodeAPI from mgmt and k3s nodes",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-010725476877dd78f",
                  "sg-05c963cfeb5750927"
                ],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [],
                "description": "access SNodeAPI from snode node workers",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5000
              },
              {
                "cidr_blocks": [],
                "description": "allow ICMP Echo",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-05c963cfeb5750927"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "docker engine API",
                "from_port": 2375,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c963cfeb5750927"
                ],
                "self": false,
                "to_port": 2375
              },
              {
                "cidr_blocks": [],
                "description": "prometheus scrape from mgmt nodes",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c963cfeb5750927"
                ],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [],
                "description": "storage node hubLvol",
                "from_port": 9030,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9060
              },
              {
                "cidr_blocks": [],
                "description": "storage node remote devices",
                "from_port": 9060,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9099
              },
              {
                "cidr_blocks": [],
                "description": "storage nodes discovery",
                "from_port": 4420,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 4420
              }
            ],
            "name": "israel-storage_nodes_sg",
            "name_prefix": "",
            "owner_id": "565979732541",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0377ac53ae2211a22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_gateway_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.extra_nodes_sg",
            "aws_security_group.loadbalancer_sg",
            "aws_security_group.mgmt_node_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tfengine_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:security-group/sg-03f1973c10cbc765f",
            "description": "tfEngine security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f1973c10cbc765f",
            "ingress": [],
            "name": "terraform-2025060413504711440000000c",
            "name_prefix": "terraform-",
            "owner_id": "565979732541",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0377ac53ae2211a22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:network-acl/acl-066aff9f4ae23074c",
            "default_network_acl_id": "acl-066aff9f4ae23074c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-066aff9f4ae23074c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "565979732541",
            "subnet_ids": [
              "subnet-05aba4401e6c4b99c",
              "subnet-0657312b2af37ceda",
              "subnet-08108501f46c2343e",
              "subnet-085c8c517bf91864d"
            ],
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0377ac53ae2211a22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:route-table/rtb-0c14bc8d6fc21a60a",
            "default_route_table_id": "rtb-0c14bc8d6fc21a60a",
            "id": "rtb-0c14bc8d6fc21a60a",
            "owner_id": "565979732541",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0377ac53ae2211a22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:security-group/sg-09b8e6da314af317e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-09b8e6da314af317e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "565979732541",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0377ac53ae2211a22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6c87520f954b791",
            "arn": "arn:aws:ec2:us-east-2:565979732541:elastic-ip/eipalloc-0a6c87520f954b791",
            "domain": "vpc",
            "id": "eipalloc-0a6c87520f954b791",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-21-91-136.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.91.136",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-us-east-2a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-000e52109cc54cdda",
            "arn": "arn:aws:ec2:us-east-2:565979732541:elastic-ip/eipalloc-000e52109cc54cdda",
            "domain": "vpc",
            "id": "eipalloc-000e52109cc54cdda",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-23-110-120.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.110.120",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-us-east-2b",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:internet-gateway/igw-083c293441afbdb98",
            "id": "igw-083c293441afbdb98",
            "owner_id": "565979732541",
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0377ac53ae2211a22"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6c87520f954b791",
            "connectivity_type": "public",
            "id": "nat-02c2bec0fce904e2a",
            "subnet_id": "subnet-085c8c517bf91864d",
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-us-east-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-000e52109cc54cdda",
            "connectivity_type": "public",
            "id": "nat-07f070cc0b6ffbddb",
            "subnet_id": "subnet-05aba4401e6c4b99c",
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-us-east-2b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-083c293441afbdb98",
            "id": "r-rtb-0c901d142279cf4471080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c901d142279cf447",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:route-table/rtb-0dca75bf4e4aba784",
            "id": "rtb-0dca75bf4e4aba784",
            "owner_id": "565979732541",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-private-us-east-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0377ac53ae2211a22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:route-table/rtb-01e54b2ee615f9601",
            "id": "rtb-01e54b2ee615f9601",
            "owner_id": "565979732541",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-private-us-east-2b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0377ac53ae2211a22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:route-table/rtb-0c901d142279cf447",
            "id": "rtb-0c901d142279cf447",
            "owner_id": "565979732541",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0377ac53ae2211a22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0867f2b164c5d6bba",
            "route_table_id": "rtb-0dca75bf4e4aba784",
            "subnet_id": "subnet-08108501f46c2343e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f2c4216309fab7e",
            "route_table_id": "rtb-01e54b2ee615f9601",
            "subnet_id": "subnet-0657312b2af37ceda"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f126a4637c6d8e5a",
            "route_table_id": "rtb-0c901d142279cf447",
            "subnet_id": "subnet-085c8c517bf91864d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0daf7de4bcf54d18b",
            "route_table_id": "rtb-0c901d142279cf447",
            "subnet_id": "subnet-05aba4401e6c4b99c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:subnet/subnet-08108501f46c2343e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08108501f46c2343e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565979732541",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-private-us-east-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-private-us-east-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0377ac53ae2211a22"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:subnet/subnet-0657312b2af37ceda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0657312b2af37ceda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565979732541",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-private-us-east-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-private-us-east-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0377ac53ae2211a22"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:subnet/subnet-085c8c517bf91864d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085c8c517bf91864d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565979732541",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-public-us-east-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-public-us-east-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0377ac53ae2211a22"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:subnet/subnet-05aba4401e6c4b99c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05aba4401e6c4b99c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565979732541",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-public-us-east-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb-public-us-east-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0377ac53ae2211a22"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565979732541:vpc/vpc-0377ac53ae2211a22",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-066aff9f4ae23074c",
            "default_route_table_id": "rtb-0c14bc8d6fc21a60a",
            "default_security_group_id": "sg-09b8e6da314af317e",
            "dhcp_options_id": "dopt-012b99fca0e18d7e2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0377ac53ae2211a22",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c14bc8d6fc21a60a",
            "owner_id": "565979732541",
            "tags": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "israel-dev",
              "Name": "israel-storage-vpc-sb",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}